Name:                stripe-core
Version:             0.3.1
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Library
  Exposed-modules:
                       Stripe.Account
                       Stripe.Charge
                       Stripe.Core
                       Stripe.Coupon
                       Stripe.Customer
                       Stripe.Discount
                       Stripe.Invoice
                       Stripe.Plan
                       Stripe.Subscription
                       Stripe.Token
  Build-Depends:       base,
                       aeson                >= 0.6 && < 0.9,
                       bytestring           >= 0.9 && < 0.11,
                       cereal               >= 0.4 && < 0.5,
                       http-types           == 0.8.*,
                       monad-control        == 0.3.*,
                       mtl                  >= 2.0 && <2.3,
                       safecopy             == 0.8.*,
                       text                 >= 0.11 && < 1.3,
                       unordered-containers == 0.2.*