name:                stripe-http-conduit
version:             0.1.3
synopsis:            binding to stripe payment API - uses http-conduits for the HTTP connection
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Stripe.HttpConduit
  build-depends:       base          >= 4.5 && < 5,
                       mtl           >= 2.0 && < 2.2,
                       monad-control == 0.3.*,
                       aeson         == 0.6.*,
                       conduit       == 1.0.*,
                       stripe-core   == 0.2.*,
                       text          >= 0.11 && < 1.1,
                       http-conduit  >= 1.9 && < 2.1,
                       http-types    == 0.8.*