name:                stripe-http-conduit
version:             0.1.5
synopsis:            binding to stripe payment API - uses http-conduits for the HTTP connection
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Stripe.HttpConduit
  build-depends:       base          >= 4.5 && < 5,
                       mtl           >= 2.0 && < 2.3,
                       monad-control == 0.3.*,
                       aeson         >= 0.6 && < 0.9,
                       conduit       >= 1.1 && < 1.3,
                       stripe-core   >= 0.2 && < 0.4,
                       text          >= 0.11 && < 1.3,
                       http-conduit  >= 1.9 && < 2.2,
                       http-types    == 0.8.*,
                       resourcet
